# kamir

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
deploy/: 10-kamir-poweroff.pkla  kamir-gpio-play.service  kamir-gpio-play.service.example
docs/: architecture.md  gpio-play.md  printing.md  requirements.md  rules-note.md
docs/adr/: 0001-system-scope.md  0002-printing-strategy.md
kamir/: __main__.py  cli.py  config.py  domain.py
kamir/db/: art.py  load.py  write.py
kamir/filter/: cards.py
kamir/hardware/: display.py  gpio_led.py  leds.py  tm1637_display.py
kamir/images/: cache.py  fetch.py  process.py
kamir/play/: display.py  gpio_runner.py  gpio_session.py  select.py
kamir/printer/: image.py  render.py  send.py
kamir/render/: layout.py  pdf.py
kamir/utils/: log.py  progress.py
memory/: MEMORY.md  feedback_git_remote.md  project_scope.md
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_db_art.py  test_display.py  test_domain.py  test_filter.py  test_gpio_runner.py  test_gpio_session.py  test_hardware_display.py  test_image.py  test_process.py  test_render.py  test_select.py  test_send.py
