[project]
name = "kamir"
version = "0.2.0"
description = "Interactive Momir Basic play tool for Raspberry Pi + thermal printer"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "tqdm>=4.67.3",
]

[project.scripts]
kamir = "kamir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kamir"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
