[project]
name = "kamir"
version = "0.2.0"
description = "Interactive Momir Basic play tool for Raspberry Pi + thermal printer"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0.1 ; sys_platform == 'linux'",
    "lgpio>=0.2.2.0 ; sys_platform == 'linux'",
    "pillow>=10.0",
    "raspberrypi-tm1637>=1.3.8 ; sys_platform == 'linux'",
    "tqdm>=4.67.3",
]

[project.scripts]
kamir = "kamir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kamir"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
